--- a/project_document.Rmd
+++ b/project_document.Rmd
@@ -228,7 +228,7 @@ Additionally, we include an array of county fixed effects, $\nu_{i}$, that contr
 $$ODR_{it} =  1\{\text{Expansion}_i\} \left [ \sum_{y=-4}^{-2} \beta_y^{pre} 1\{t - t_i^* = y\} + \sum_{y=0}^{4} \beta_y^{post} 1\{t - t_i^* = y\}\right ] + \textbf{X}_{it} \gamma + \nu_{i} + \tau_{t} + \varepsilon_{it}$$
 In this approach, $1\{\text{Expansion}_i\}$ is a binary variable identifying high-eligibility states, and $t_i^*$ is the year Medicaid was expanded in county $i$. The $1\{t - t_i^* = y\}$ terms are dummy variables corresponding to an *event year*, i.e., the year relative to the expansion of Medicaid at time $t_i^*$. The coefficients of interest are now $\beta^{pre}_y$ and $\beta^{post}_y$, which measure the relationship between drug overdose death rates and expansion status in each of the four years leading up to Medicaid expansion and five years after. We omit the dummy for the year before Medicaid expansion ($y = -1$), so that the estimates of $\beta^{pre}_y$ and $\beta^{post}_y$ capture effects relative to just before Medicaid expansion. 
 
-In particular, we measure the $\beta^{pre}_y$ parameters to capture the relationship between eligibility status and outcomes before Medicaid was expanded, and their direction and statistical significance demonstrate the assumption of parallel trends; statistically significant estimates during the pre-treatment period would be inconsistent with the parallel trends assumption. The $\beta^{post}_y$ parameters represent the causal effect of Medicaid expansion for each $y$. 
+In particular, we measure the $\beta^{pre}_y$ parameters to capture the relationship between expansion status and overdose death rates before Medicaid was expanded, in order to establish the assumption of parallel trends; statistically significant estimates during the pre-treatment period would be inconsistent with the parallel trends assumption, as this would indicate that expansion counties already faced a different trajectory of overdose death rates prior to the expansion of Medicaid. The $\beta^{post}_y$ parameters represent the causal effect of Medicaid expansion for each event year ($y$).
 
 Finally, we include the same vector of time-varying controls ($\textbf{X}_{it}$), county fixed-effects ($\nu_{i}$), and year fixed-effects ($\tau_{t}$), as specified in the differences-in-differences approach.
 
